--- a/AutomaticHarvest/AutomaticHarvest.csproj
+++ b/AutomaticHarvest/AutomaticHarvest.csproj
@@ -34,10 +34,11 @@
     <Compile Include="AutomaticHarvestConfig.cs" />
     <Compile Include="AutoPlantHarvester.cs" />
     <Compile Include="KModPatch.cs" />
+    <Compile Include="KUtils\LineOfSightUtils.cs" />
+    <Compile Include="KUtils\ParabolicMover.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="STRINGS.cs" />
-    <Compile Include="Tool\KModGridUtilities.cs" />
-    <Compile Include="Tool\StringUtils.cs" />
+    <Compile Include="KUtils\StringUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
@@ -60,6 +61,9 @@
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\UnityEngine.UI.dll</HintPath>
       <Private>False</Private>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Tool\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
