--- a/AutomaticHarvest/AutomaticHarvest.csproj
+++ b/AutomaticHarvest/AutomaticHarvest.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Test.cs" />
     <Compile Include="AutomaticHarvestConfig.cs" />
     <Compile Include="AutoPlantHarvester.cs" />
     <Compile Include="KModPatch.cs" />
@@ -39,6 +40,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="STRINGS.cs" />
     <Compile Include="KUtils\StringUtils.cs" />
+    <Compile Include="ExplosionUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
