--- a/MinionAge_DLC/MinionAge_DLC.csproj
+++ b/MinionAge_DLC/MinionAge_DLC.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="test2.cs" />
     <Compile Include="Tool\FXHManager.cs" />
+    <Compile Include="Tool\KLogUtil.cs" />
     <Compile Include="Tool\KModAddClonedSideScreen.cs" />
     <Compile Include="Tool\KModAudioUtil.cs" />
     <Compile Include="Tool\KModDelayedActionExecutor .cs" />
