--- a/EternalDecay/EternalDecay.csproj
+++ b/EternalDecay/EternalDecay.csproj
@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="KModPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Content\Utils\KLocUtil.cs" />
     <Compile Include="Content\Utils\KLogUtil.cs" />
