--- a/EternalDecay/EternalDecay.csproj
+++ b/EternalDecay/EternalDecay.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\..\..\Documents\Klei\OxygenNotIncluded\mods\Dev\EternalDecay\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -30,7 +30,32 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <LangVersion>10.0</LangVersion>
+  </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Content\Comps\Accepttheinheritance.cs" />
+    <Compile Include="Content\Comps\ColorfulPulsatingLight2D.cs" />
+    <Compile Include="Content\Comps\MiniBrain.cs" />
+    <Compile Include="Content\Comps\Ownable.cs" />
+    <Compile Include="Content\Configs\ModConfig.cs" />
+    <Compile Include="Content\Configs\STRINGS.cs" />
+    <Compile Include="Content\Core\Effects.cs" />
+    <Compile Include="Content\Core\EternalDecayInitializer.cs" />
+    <Compile Include="Content\Core\EternalDecayMain.cs" />
+    <Compile Include="Content\Core\MinionDataSaver.cs" />
+    <Compile Include="Content\Core\MinionDataTransfer.cs" />
+    <Compile Include="Content\Core\MinionEventManager.cs" />
+    <Compile Include="Content\Items\MiniBrainBadConfig.cs" />
+    <Compile Include="Content\Items\MiniBrainConfig.cs" />
+    <Compile Include="Content\Patches\AssignableSlotsPatch.cs" />
+    <Compile Include="Content\Patches\ChoreTypesPatch.cs" />
+    <Compile Include="Content\Patches\DeathsPatch.cs" />
+    <Compile Include="Content\Patches\MinionPatch.cs" />
+    <Compile Include="Content\Patches\VitalsTableScreenPatch.cs" />
+    <Compile Include="Content\Utils\ButtonUtil.cs" />
+    <Compile Include="Content\Utils\EffectBuilderUtil.cs" />
+    <Compile Include="Content\Utils\ScreenUtil.cs" />
     <Compile Include="KModPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Content\Utils\KLocUtil.cs" />
@@ -41,20 +66,33 @@
   <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\0Harmony.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\UnityEngine.UI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.UIModule">
+      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\UnityEngine.UIModule.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\Components\" />
-    <Folder Include="Content\Core\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
