--- a/TAccessories/TAccessories.csproj
+++ b/TAccessories/TAccessories.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{21509A00-E2EB-4DB5-B005-E30C977E12BC}</ProjectGuid>
+    <ProjectGuid>{8E54A034-FCF8-4B55-A54F-836648A6B2EC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ElementExpansion</RootNamespace>
-    <AssemblyName>ElementExpansion</AssemblyName>
+    <RootNamespace>TAccessories</RootNamespace>
+    <AssemblyName>TAccessories</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\Documents\Klei\OxygenNotIncluded\mods\Dev\ElementExpansion\</OutputPath>
+    <OutputPath>..\..\..\..\Documents\Klei\OxygenNotIncluded\mods\Dev\Taccessories\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -30,41 +30,46 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <LangVersion>10.0</LangVersion>
-  </PropertyGroup>
+  <ItemGroup>
+    <Compile Include="KEffects.cs" />
+    <Compile Include="Content\EffectBuilder.cs" />
+    <Compile Include="KDb.cs" />
+    <Compile Include="KModPatch.cs" />
+    <Compile Include="KSTRING.cs" />
+    <Compile Include="TAccessories.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="test2.cs" />
+    <Compile Include="Utils\KLocUtil.cs" />
+    <Compile Include="Utils\KLogUtil.cs" />
+    <Compile Include="Utils\KModMinionUtils.cs" />
+    <Compile Include="Utils\KPosUtil.cs" />
+    <Compile Include="Utils\KUtils.cs" />
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\0Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\OxygenConsumingPlant\bin\Debug\Assembly-CSharp.dll</HintPath>
+      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="EternalDecay">
+      <HintPath>..\..\..\..\Documents\Klei\OxygenNotIncluded\mods\Dev\EternalDecay\EternalDecay.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="UnityEngine.ImageConversionModule">
-      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\UnityEngine.ImageConversionModule.dll</HintPath>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\UnityEngine.UI.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="debris\TestElementConfig.cs" />
-    <Compile Include="KElement\ElementUtil.cs" />
-    <Compile Include="KElement\Elements.cs" />
-    <Compile Include="KModPatch.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="STRINGS.cs" />
-    <Compile Include="Utils\KLogUtil.cs" />
-    <Compile Include="Utils\KPosUtil.cs" />
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
