重构UI组件并增强角色继承逻辑
在 `Accepttheinheritance.cs` 中添加 `ShowInheritanceInfo` 方法，替换旧的对话框实现。新增 `AETE_CursorDurationMarker` 类以处理光标持续时间。移除 `CustomInfoDialogScreen.cs` 中的 `SimpleDialogScreen` 类，添加 `InheritanceInformation` 类以显示继承信息面板。

在 `TUNINGS.cs` 中定义最大属性等级常量 `ATTRIBUTEMAXLEVEL`。在 `EternalDecayMain.cs` 中添加 `NotifyDeathApplied` 方法以通知死亡效果。更新 `MinionDataTransfer.cs` 中的属性和技能转移逻辑，确保角色继承时的正确性。

在 `DetailTabHeaderPatch.cs` 中处理新生成标签的位置，增强 `KUIBuilder.cs` 中的 UI 组件创建和管理功能。最后，在 `EternalDecay.csproj` 中添加对 `PLib` 的引用并更新编译设置。

--- a/EternalDecay/EternalDecay.csproj
+++ b/EternalDecay/EternalDecay.csproj
@@ -12,6 +12,8 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,10 +37,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Content\Comps\Accepttheinheritance.cs" />
+    <Compile Include="Content\Comps\Class1.cs" />
     <Compile Include="Content\Comps\ColorfulPulsatingLight2D.cs" />
     <Compile Include="Content\Comps\DebuffCom\AbyssophobiaDebuff.cs" />
     <Compile Include="Content\Utils\UI\Button.cs" />
-    <Compile Include="Content\Comps\KUI\CustomInfoDialogScreen.cs" />
+    <Compile Include="Content\Comps\KUI\InheritanceInformationScreen.cs" />
     <Compile Include="Content\Comps\MiniBrain.cs" />
     <Compile Include="Content\Comps\MinionBrainResume.cs" />
     <Compile Include="Content\Comps\Ownable.cs" />
@@ -88,6 +91,12 @@
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="PLib, Version=4.18.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Documents\Klei\OxygenNotIncluded\mods\Dev\EternalDecay\PLib.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System" />
     <Reference Include="Unity.TextMeshPro">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Unity.TextMeshPro.dll</HintPath>
       <Private>False</Private>
@@ -98,6 +107,7 @@
     </Reference>
     <Reference Include="UnityEngine.ImageConversionModule">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\UnityEngine.ImageConversionModule.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.TextRenderingModule">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
