添加 CykUtils 支持和 ILRepack 引用
在 `InheritanceInformationScreen.cs` 中引入 `CykUtils`，并注释掉按钮的 Sprite 加载行。
新增 `KModResources.cs`，实现纹理和精灵的加载功能，以及 AssetBundle 的管理。
更新 `EternalDecay.csproj`，添加对 `ILRepack` 的引用，并调整项目文件以包含新的编译文件。
在 `packages.config` 中添加 `ILRepack` 包的配置，指定版本和目标框架。

--- a/EternalDecay/EternalDecay.csproj
+++ b/EternalDecay/EternalDecay.csproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\ILRepack.2.0.44\build\ILRepack.props" Condition="Exists('..\packages\ILRepack.2.0.44\build\ILRepack.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -37,10 +38,17 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Content\Comps\Accepttheinheritance.cs" />
-    <Compile Include="Content\Comps\Class1.cs" />
-    <Compile Include="Content\Comps\ColorfulPulsatingLight2D.cs" />
+    <Compile Include="Content\Comps\KAggressiveChore.cs" />
     <Compile Include="Content\Comps\DebuffCom\AbyssophobiaDebuff.cs" />
-    <Compile Include="Content\Utils\UI\Button.cs" />
+    <Compile Include="Content\Comps\DebuffCom\BreakStuff.cs" />
+    <Compile Include="Content\Comps\DebuffCom\SpecializationCoolWanderer.cs" />
+    <Compile Include="Content\Comps\DebuffCom\SpecializationHeatWanderer.cs" />
+    <Compile Include="Content\Comps\DebuffCom\SpecializationScorchingMetalSharer.cs" />
+    <Compile Include="Content\Comps\DebuffCom\Trigger.cs" />
+    <Compile Include="Content\Comps\ExplosionUtil.cs" />
+    <Compile Include="Content\Core\Audio.cs" />
+    <Compile Include="Content\Core\ShowMinionInfo.cs" />
+    <Compile Include="Content\Utils\KModAudioUtil.cs" />
     <Compile Include="Content\Comps\KUI\InheritanceInformationScreen.cs" />
     <Compile Include="Content\Comps\MiniBrain.cs" />
     <Compile Include="Content\Comps\MinionBrainResume.cs" />
@@ -66,7 +74,7 @@
     <Compile Include="Content\Patches\MinionPatch.cs" />
     <Compile Include="Content\Patches\VitalsTableScreenPatch.cs" />
     <Compile Include="Content\Utils\EffectBuilderUtil.cs" />
-    <Compile Include="Content\Utils\UI\KUIBuilder.cs" />
+    <Compile Include="Content\Utils\KModResources.cs" />
     <Compile Include="KModPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Content\Utils\KLocUtil.cs" />
@@ -87,18 +95,25 @@
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="FMODUnity">
+      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\FMODUnity.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="PLib, Version=4.18.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Documents\Klei\OxygenNotIncluded\mods\Dev\EternalDecay\PLib.dll</HintPath>
+    <Reference Include="PLib">
+      <HintPath>..\Managed\PLib.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="Unity.TextMeshPro">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Unity.TextMeshPro.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.AssetBundleModule">
+      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
@@ -122,6 +137,18 @@
       <Private>False</Private>
     </Reference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\ILRepack.2.0.44\build\ILRepack.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ILRepack.2.0.44\build\ILRepack.props'))" />
+  </Target>
+  <PropertyGroup>
+    <PostBuildEvent>"C:\Users\Administrator\Desktop\Project\NOIMods\packages\ILRepack.2.0.44\tools\ILRepack.exe" /out:"C:\Users\Administrator\Documents\Klei\OxygenNotIncluded\mods\Dev\EternalDecay\EternalDecay.dll" "C:\Users\Administrator\Documents\Klei\OxygenNotIncluded\mods\Dev\EternalDecay\EternalDecay.dll" "C:\Users\Administrator\Desktop\Project\NOIMods\Managed\PLib.dll" /lib:"C:\Users\Administrator\Desktop\Project\NOIMods\Managed"
+</PostBuildEvent>
+  </PropertyGroup>
 </Project>
