更新气库和液库配置，优化项目设置
- 修改 `GasReservoirPatch.cs` 和 `LiquidReservoirPatch.cs` 中 `Postfix` 方法的访问修饰符为 `public`。
- 限制 `Config.cs` 中气库和液库的容量上限为 `100000`。
- 更新 `MiniBox.csproj` 中 `PLib` 的引用版本为 `4.17.0.0`，并调整 `HintPath`。
- 添加后期构建事件以使用 `ILRepack` 工具打包 DLL 文件。
- 更新 `AssemblyInfo.cs` 中的版本号为 `3.1.0.0`。

--- a/MiniBox/MiniBox.csproj
+++ b/MiniBox/MiniBox.csproj
@@ -47,8 +47,9 @@
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="PLib">
-      <HintPath>..\..\..\..\Documents\Klei\OxygenNotIncluded\mods\Dev\MinionAge\PLib.dll</HintPath>
+    <Reference Include="PLib, Version=4.17.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Managed\PLib.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -92,4 +93,8 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>"C:\Users\Administrator\Desktop\Project\NOIMods\packages\ILRepack.2.0.44\tools\ILRepack.exe" /out:"C:\Users\Administrator\Documents\Klei\OxygenNotIncluded\mods\Dev\MiniBox\MiniBox.dll" "C:\Users\Administrator\Documents\Klei\OxygenNotIncluded\mods\Dev\MiniBox\MiniBox.dll" "C:\Users\Administrator\Desktop\Project\NOIMods\Managed\PLib.dll" /lib:"C:\Users\Administrator\Desktop\Project\NOIMods\Managed"
+</PostBuildEvent>
+  </PropertyGroup>
 </Project>
