增强植物收获功能，优化项目结构
在 `AutoPlantHarvester.cs` 中添加了新字段和方法，改进植物生长速度、存储逻辑和用户菜单交互，增加调试日志选项和声波效果。

更新 `AutomaticHarvest.csproj` 的编译设置，设置语言版本为 10.0。

在 `AutomaticHarvestConfig.cs` 中修改建筑定义，增加逻辑输入端口和输出管道类型，调整存储容量和过滤器。

在 `KModPatch.cs` 中添加补丁以动态改变 `RangeVisualizerEffect` 的高亮颜色。

新增 `KLogUtil.cs` 日志工具类，支持时间戳和调用上下文的日志输出。

在 `Reservoir.cs` 中增加储存组件，管理物品存储状态并更新进度条。

清理 `Test.cs` 中不再使用的代码，优化项目结构。

移除 `ExplosionUtil.cs` 中与爆炸效果相关的代码，简化逻辑实现。

--- a/AutomaticHarvest/AutomaticHarvest.csproj
+++ b/AutomaticHarvest/AutomaticHarvest.csproj
@@ -30,17 +30,21 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <LangVersion>10.0</LangVersion>
+  </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Test.cs" />
+    <Compile Include="AutomaticHarvestK.cs" />
     <Compile Include="AutomaticHarvestConfig.cs" />
     <Compile Include="AutoPlantHarvester.cs" />
     <Compile Include="KModPatch.cs" />
+    <Compile Include="KUtils\KLogUtil.cs" />
     <Compile Include="KUtils\LineOfSightUtils.cs" />
     <Compile Include="KUtils\ParabolicMover.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reservoir.cs" />
     <Compile Include="STRINGS.cs" />
     <Compile Include="KUtils\StringUtils.cs" />
-    <Compile Include="ExplosionUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
@@ -54,6 +58,9 @@
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="FMODUnity">
+      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\FMODUnity.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
