--- a/AutomaticHarvest/AutomaticHarvest.csproj
+++ b/AutomaticHarvest/AutomaticHarvest.csproj
@@ -36,13 +36,17 @@
   <ItemGroup>
     <Compile Include="AutomaticHarvestK.cs" />
     <Compile Include="AutomaticHarvestConfig.cs" />
+    <Compile Include="AutomaticHarvestLogic.cs" />
     <Compile Include="AutoPlantHarvester.cs" />
     <Compile Include="KModPatch.cs" />
+    <Compile Include="KUtils\KLocUtil.cs" />
     <Compile Include="KUtils\KLogUtil.cs" />
+    <Compile Include="KUtils\KUtils.cs" />
     <Compile Include="KUtils\LineOfSightUtils.cs" />
     <Compile Include="KUtils\ParabolicMover.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reservoir.cs" />
+    <Compile Include="SolidConduitDispenserK.cs" />
     <Compile Include="STRINGS.cs" />
     <Compile Include="KUtils\StringUtils.cs" />
   </ItemGroup>
@@ -59,9 +63,6 @@
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="FMODUnity">
-      <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\FMODUnity.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>D:\Program Files (x86)\Steam\steamapps\common\OxygenNotIncluded\OxygenNotIncluded_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
@@ -71,8 +72,6 @@
       <Private>False</Private>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Tool\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
